; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/qla2xxx/extr_qla_nx.c_qla82xx_clear_rst_ready.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/qla2xxx/extr_qla_nx.c_qla82xx_clear_rst_ready.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qla_hw_data = type { i32 }

@QLA82XX_CRB_DRV_STATE = common dso_local global i32 0, align 4
@QLA82XX_DRVST_RST_RDY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.qla_hw_data*)* @qla82xx_clear_rst_ready to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @qla82xx_clear_rst_ready(%struct.qla_hw_data* %0) #0 {
  %2 = alloca %struct.qla_hw_data*, align 8
  %3 = alloca i32, align 4
  store %struct.qla_hw_data* %0, %struct.qla_hw_data** %2, align 8
  %4 = load %struct.qla_hw_data*, %struct.qla_hw_data** %2, align 8
  %5 = load i32, i32* @QLA82XX_CRB_DRV_STATE, align 4
  %6 = call i32 @qla82xx_rd_32(%struct.qla_hw_data* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @QLA82XX_DRVST_RST_RDY, align 4
  %8 = load %struct.qla_hw_data*, %struct.qla_hw_data** %2, align 8
  %9 = getelementptr inbounds %struct.qla_hw_data, %struct.qla_hw_data* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = mul nsw i32 %10, 4
  %12 = shl i32 %7, %11
  %13 = xor i32 %12, -1
  %14 = load i32, i32* %3, align 4
  %15 = and i32 %14, %13
  store i32 %15, i32* %3, align 4
  %16 = load %struct.qla_hw_data*, %struct.qla_hw_data** %2, align 8
  %17 = load i32, i32* @QLA82XX_CRB_DRV_STATE, align 4
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @qla82xx_wr_32(%struct.qla_hw_data* %16, i32 %17, i32 %18)
  ret void
}

declare dso_local i32 @qla82xx_rd_32(%struct.qla_hw_data*, i32) #1

declare dso_local i32 @qla82xx_wr_32(%struct.qla_hw_data*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
